--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body{
     color: #657180;
     fon-size: 16px;
 }
-.daily-menu{
+.daily-meun{
     width: 150px;
     position: fixed;
     top:0;
@@ -15,7 +15,7 @@ html, body{
     overflow: auto;
     background: #f5f7f9;
 }
-.daily-menu-item{
+.daily-meun-item{
     font-size: 18px;
     text-align: center;
     margin: 5px 0;
@@ -24,10 +24,10 @@ html, body{
     border-right: 2px solid transparent;
     transition: all .3s ease-in-out;
 }
-.daily-menu-item:hover{
+.daily-meun-item:hover{
     background: #e3e8ee;
 }
-.daily-menu-item.on{
+.daily-meun-item.on{
     border-right: 2px solid #3399ff;
 }
 .daily-list{
@@ -54,4 +54,60 @@ html, body{
 .daily-article{
     margin-left: 450px;
     padding: 20px;
+}
+.daily-meun ul {
+    list-style: none;
+}
+.daily-meun ul li a{
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    padding: 5px 0;
+    margin: 5px 0;
+    cursor: pointer;
+}
+.daily-meun ul li a:hover, .daily-meun ul li a.on {
+    color: #3399ff;
+}
+/*每日推荐*/
+daily-item {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    padding: 16px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.daily-item:hover {
+    background: #e3e8ee;
+}
+daily-img {
+    width: 80px;
+    height: 80px;
+    float: left;
+}
+.daily img {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+}
+daily-title {
+    padding: 10px 5px 10px 90px;
+}
+daily-title.onImg {
+    padding-left: 5px;
+}
+.daily-list {
+    width: 300px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 150px;
+    overflow: auto;
+    border-right: 1px solid #d7dde4;
+}
+.daily-date {
+    text-align: center;
+    margin: 10px 0;
 }
